--- a/syles.css
+++ b/syles.css
@@ -7,6 +7,7 @@ body {
     align-items: center;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     color: #fff;
+    box-sizing: border-box;
   }
 
 .hero {
@@ -17,11 +18,11 @@ body {
     min-height: 100vh;
 }
 h1 {
-    font-size: 6rem;
+    font-size: 5rem;
     text-align: center;
 }
 h3 {
-    font-size: 3em;
+    font-size: 2.5em;
     opacity: 0.8;
     margin-top: -4rem;
 }
@@ -58,4 +59,34 @@ h3 {
   
   .social-icon:hover {
     transform: scale(1.25);
+  }
+  
+  nav {
+    box-sizing: border-box;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 2rem;
+    z-index: 100;
+  }
+  
+  .nav-left, .nav-right {
+    display: flex;
+    align-items: center;
+  }
+  
+  .nav-btn {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 0.5rem;
+    font-size: 1.5rem;
+  }
+  
+  .separator {
+    margin: 0 0.5rem;
+    color: #fff;
   }
