Add about page content
Added about page content and profile picture

--- a/syles.css
+++ b/syles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0 auto;
-    height: 100vh;
+    min-height: 100vh;
     background-color: #000;
     display: flex;
     justify-content: center;
@@ -10,27 +10,85 @@ body {
     box-sizing: border-box;
   }
 
-.hero {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+nav {
+  box-sizing: border-box;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  z-index: 100;
 }
+
 h1 {
     font-size: 5rem;
     text-align: center;
 }
+
+h2 {
+    font-size: 3.75rem;
+    text-align: center;
+}
+
 h3 {
-    font-size: 2.5em;
-    opacity: 0.8;
+    font-size: 2.5rem;
     margin-top: -4rem;
 }
+
+p {
+    font-size: 1.25rem;
+    text-align: center;
+}
+
+a {
+  color: #fff;
+  text-decoration: underline;
+  text-decoration-color: #fff;
+}
+
+.profile-pic-container {
+  width: 150px;
+  height: 150px;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  overflow: hidden;
+  background-image: url('./media/profile-pic.png');
+  margin-bottom: -2rem;
+  background-size: cover;
+  background-position: center;
+}
+
+.about-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 75%;
+    padding-top: 3.75rem;
+
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.about-title {
+    margin-bottom: -1rem;
+}
+
 .auto-type {
     display: inline-block;
     vertical-align: middle;
     line-height: 1;
     margin: 0;
+    opacity: 0.8;
   }
   
 .typed-cursor {
@@ -59,19 +117,6 @@ h3 {
   
   .social-icon:hover {
     transform: scale(1.25);
-  }
-  
-  nav {
-    box-sizing: border-box;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 2rem;
-    z-index: 100;
   }
   
   .nav-left, .nav-right {
