Fix about page and style
Added some small corrections

--- a/syles.css
+++ b/syles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0 auto;
-    min-height: 100vh;
+    height: 100vh;
     background-color: #000;
     display: flex;
     justify-content: center;
@@ -40,7 +40,7 @@ h3 {
 
 p {
     font-size: 1.25rem;
-    text-align: center;
+    text-align: justify;
 }
 
 a {
