--- a/syles.css
+++ b/syles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0 auto;
-    height: 100vh;
+    min-height: 100vh;
     background-color: #000;
     display: flex;
     justify-content: center;
